  latitude first and longitude second.

* Added unit 'ppv' to the included udunits2-common.xml file.

* Added variables for surface temperature, total water vapour content, and
  total cloud cover to ECMWF GRIB ingestion.

* The default internal units have been changes to SI (except for molar mass).
  All algorithms have been adapted accordingly.

* Added variable conversions for apriori profiles.

* Added support for GEOMS FTIR C2H2 ingestion.

* Added support for OMI OMCHOCHO ingestion.

* Added support for QA4ECV NO2 and HCHO products.

* Changed --list-conversions command line option to --list-derivations.
  And added --list-derivations option to harpdump.

0.4 2016-10-16
~~~~~~~~~~~~~~

* Fixed wrong scaling factor in conversions related to the ideal gas law
  (10^2 vs. 10^-2) and barometric formula (10^-9 vs. 10^-6).

* Fixed error in algorithm to derive gravity from latitude and height.

* Fixed invalid sorting of collocation result file (which resulted in wrong
  results when performing a collocation resampling).

* Fixed wrong independent dimension length for altitude/pressure bounds for
  SCIAMACHY Level2 ingestion.

* Added apriori number density variables to SCIAMACHY Level2 ingestion.

* Added variable conversion from latitude/longitude per vertical profile point
  to single (mid-point) latitude/longitude for profile.

* Variable conversions for altitude and pressure bounds now also work when
  they are dependend on latitude and longitude dimensions.

* Fixed crash in derived variable conversion for volume mixing ratio from
  mass mixing ratio (for total air).

* Changed dimension argument of 'flatten()' operation from string to
  identifier.

* Fixed issue where -inf/+inf valid_min/valid_max attributes could not be
  exported as float values in the Python harp.export_product() interface.

* When deriving latitude/longitude bounds from mid points, latitude is now
  clamped to [-90,90] and longitude is wrapped to [-180,180].
