@@ -1191,7 +1191,17 @@ avk</td>
 <td>&nbsp;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_number_density</td>
+<tr class="row-odd"><td>&lt;pm&gt;_column_density</td>
+<td>stratospheric,
+tropospheric</td>
+<td>&nbsp;</td>
+<td>X</td>
+<td>X</td>
+<td>X</td>
+<td>&nbsp;</td>
+<td>this is the mass density</td>
+</tr>
+<tr class="row-even"><td>&lt;species&gt;_column_number_density</td>
 <td>stratospheric,
 tropospheric</td>
 <td>amf, apriori,
@@ -1202,7 +1212,7 @@ avk</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_column_mass_mixing_ratio</td>
+<tr class="row-odd"><td>&lt;species&gt;_column_mass_mixing_ratio</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&nbsp;</td>
@@ -1212,7 +1222,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_mass_mixing_ratio_dry_air</td>
+<tr class="row-even"><td>&lt;species&gt;_column_mass_mixing_ratio_dry_air</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&nbsp;</td>
@@ -1222,7 +1232,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_column_volume_mixing_ratio</td>
+<tr class="row-odd"><td>&lt;species&gt;_column_volume_mixing_ratio</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&nbsp;</td>
@@ -1232,7 +1242,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-odd"><td>&lt;species&gt;_column_volume_mixing_ratio_dry_air</td>
+<tr class="row-even"><td>&lt;species&gt;_column_volume_mixing_ratio_dry_air</td>
 <td>stratospheric,
 tropospheric</td>
 <td>&nbsp;</td>
@@ -1242,8 +1252,17 @@ tropospheric</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 </tr>
-<tr class="row-even"><td>&lt;species&gt;_density</td>
+<tr class="row-odd"><td>&lt;species&gt;_density</td>
+<td>surface</td>
 <td>&nbsp;</td>
+<td>X</td>
+<td>X</td>
+<td>X</td>
+<td>&nbsp;</td>
+<td>this is the mass density</td>
+</tr>
+<tr class="row-even"><td>&lt;pm&gt;_density</td>
+<td>surface</td>
 <td>&nbsp;</td>
 <td>X</td>
 <td>X</td>
@@ -1252,7 +1271,7 @@ tropospheric</td>
 <td>this is the mass density</td>
 </tr>
 <tr class="row-odd"><td>&lt;species&gt;_mass_mixing_ratio</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>apriori, avk</td>
 <td>X</td>
 <td>X</td>
@@ -1261,7 +1280,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 </tr>
 <tr class="row-even"><td>&lt;species&gt;_mass_mixing_ratio_dry_air</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>apriori, avk</td>
 <td>X</td>
 <td>X</td>
@@ -1270,7 +1289,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 </tr>
 <tr class="row-odd"><td>&lt;species&gt;_number_density</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>apriori, avk</td>
 <td>X</td>
 <td>X</td>
@@ -1279,7 +1298,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 </tr>
 <tr class="row-even"><td>&lt;species&gt;_partial_pressure</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>&nbsp;</td>
 <td>X</td>
 <td>X</td>
@@ -1288,7 +1307,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 </tr>
 <tr class="row-odd"><td>&lt;species&gt;_partial_pressure_dry_air</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>&nbsp;</td>
 <td>X</td>
 <td>X</td>
@@ -1297,7 +1316,7 @@ tropospheric</td>
 <td>&nbsp;</td>
 </tr>
 <tr class="row-even"><td>&lt;species&gt;_volume_mixing_ratio</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>apriori, avk</td>
 <td>X</td>
 <td>X</td>
@@ -1306,7 +1325,7 @@ tropospheric</td>
 <td>this is equal to &#8216;number mixing ratio&#8217;</td>
 </tr>
 <tr class="row-odd"><td>&lt;species&gt;_volume_mixing_ratio_dry_air</td>
-<td>&nbsp;</td>
+<td>surface</td>
 <td>apriori, avk</td>
 <td>X</td>
 <td>X</td>
@@ -1342,6 +1361,29 @@ tropospheric</td>
 </tr>
 <tr class="row-even"><td>sulphate</td>
 <td>sulphate</td>
+</tr>
+</tbody>
+</table>
+<p>The supported PM (particulate matter) types are:</p>
+<table border="1" class="docutils">
+<colgroup>
+<col width="13%" />
+<col width="87%" />
+</colgroup>
+<thead valign="bottom">
+<tr class="row-odd"><th class="head">Name</th>
+<th class="head">Description</th>
+</tr>
+</thead>
+<tbody valign="top">
+<tr class="row-even"><td>PM1</td>
+<td>particulate matter with d &lt; 1 um</td>
+</tr>
+<tr class="row-odd"><td>PM2p5</td>
+<td>particulate matter with d &lt; 2.5 um</td>
+</tr>
+<tr class="row-even"><td>PM10</td>
+<td>particulate matter with d &lt; 10 um</td>
 </tr>
 </tbody>
 </table>
